force-app/main/default/objects/Agent_Card__c/Agent_Card__c.object-meta.xml
<CustomObject>
    <label>Agent Card</label>
    <nameField>
        <displayFormat>Agent-{000}</displayFormat>
        <label>Agent Card Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Cards</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>