force-app/main/default/objects/Agent_Card__c/fields/Agent_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Last_Name__c</fullName>
    <label>Agent Last Name</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
</CustomField>