force-app/main/default/objects/Agent_Card__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <label>Agent First Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>